# monte-carlo

./: README.md  pyproject.toml
monte_carlo/: 3dim_integral.py  basic_integral.py  monte.py  pi.py  threedim_randomwalk.py  twodim_integral.py  twodimgaussian_integral.py
