[tool.poetry]
name = "monte-carlo"
version = "0.1.0"
description = ""
authors = ["Vadan Khan <vadankhan1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
path = "^16.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
